awesome it works

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,2 +1,2 @@
 all:
-	g++ -Wall -Wextra -Werror main.ccp -o my_awesome_phonebook;
+	g++ -Wall -Wextra -Werror main.cpp PhoneBook.class.cpp Contact.class.cpp -o my_awesome_phonebook;
